--- a/christmasgift/index.html
+++ b/christmasgift/index.html
@@ -6,17 +6,31 @@
     <title>Merry Christmas</title>
     <style>
         body {
+            margin: 0;
+            padding: 0;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
-            background-color: #f2f2f2;
+            background: url('christmas.jpg') no-repeat center center/cover;
             font-family: Arial, sans-serif;
+            overflow: hidden;
+        }
+        .content-box {
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 20px;
+            border-radius: 10px;
             text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            position: relative;
+            z-index: 2;
         }
         h1 {
+            margin: 0;
+            color: #2d3436;
+        }
+        p {
+            margin: 10px 0 20px;
             color: #2d3436;
         }
         button {
@@ -31,16 +45,29 @@
         button:hover {
             background-color: #74b9ff;
         }
+        #fireworksCanvas {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            pointer-events: none;
+        }
     </style>
 </head>
 <body>
-    <h1>Merry Christmas</h1>
-    <p id="message">Press the button to receive your gift</p>
-    <button onclick="sendEmail()">Press Me</button>
+    <canvas id="fireworksCanvas"></canvas>
+    <div class="content-box">
+        <h1>Merry Christmas Tove Lise and Aleksander🎅</h1>
+        <p id="message">Press the button to receive your gift🎁</p>
+        <button onclick="handleButtonPress()">Press Me</button>
+    </div>
 
     <script>
+        // Function to send the email
         function sendEmail() {
-            fetch('https://api.emailjs.com/api/v1.0/email/send', {
+            return fetch('https://api.emailjs.com/api/v1.0/email/send', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -50,24 +77,109 @@
                     template_id: 'template_2bukolw',
                     user_id: 'vhpmgrlSDUBKS5tLZ',
                     template_params: {
-                        to_email: 'tsotne.karchava04@gmail.com, emilie.kaline@outlook.com',
+                        to_email: 'tsotne.karchava04@gmail.com',
                         subject: 'Button Pressed',
                         message: 'The button was pressed on your Christmas website.'
                     }
                 })
-            })
-            .then(response => {
-                if (response.ok) {
-                    document.getElementById('message').innerText = 'Your gift is on its way!';
-                } else {
-                    alert('Something went wrong. Please try again later.');
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert('Something went wrong. Please try again later.');
             });
         }
-    </script>
+
+        // Fireworks animation
+        class Firework {
+            constructor(canvas) {
+                this.canvas = canvas;
+                this.ctx = canvas.getContext('2d');
+                this.reset();
+            }
+
+            reset() {
+                this.x = Math.random() * this.canvas.width;
+                this.y = this.canvas.height;
+                this.size = Math.random() * 3 + 1;
+                this.speedY = Math.random() * -3 - 4;
+                this.speedX = Math.random() * 6 - 3;
+                this.color = `hsl(${Math.random() * 360}, 100%, 50%)`;
+                this.opacity = 1;
+                this.life = Math.random() * 30 + 20;
+            }
+
+            update() {
+                this.x += this.speedX;
+                this.y += this.speedY;
+                this.opacity -= 0.02;
+                this.size -= 0.03;
+                if (this.size <= 0 || this.opacity <= 0) {
+                    this.reset();
+                }
+            }
+
+            draw() {
+                this.ctx.beginPath();
+                this.ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+                this.ctx.fillStyle = `rgba(${this.hexToRgb(this.color)}, ${this.opacity})`;
+                this.ctx.fill();
+            }
+
+            hexToRgb(hsl) {
+                // Convert hsl 
+            }
+        }
+
+// Initialize the fireworks animation
+function startFireworks() {
+    const canvas = document.getElementById('fireworksCanvas');
+    const ctx = canvas.getContext('2d');
+
+    // Resize canvas to fit the screen
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    const fireworks = [];
+    for (let i = 0; i < 100; i++) {
+        fireworks.push(new Firework(canvas));
+    }
+
+    function animate() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        fireworks.forEach((firework) => {
+            firework.update();
+            firework.draw();
+        });
+        requestAnimationFrame(animate);
+    }
+
+    animate();
+
+    // Stop the fireworks after 5 seconds
+    setTimeout(() => {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+    }, 5000);
+}
+
+// Handle button press: Send email and start fireworks
+function handleButtonPress() {
+    sendEmail()
+        .then((response) => {
+            if (response.ok) {
+                document.getElementById('message').innerText = 'Your gift is on its way!🏎️';
+                startFireworks();
+            } else {
+                alert('Something went wrong. Please try again later.');
+            }
+        })
+        .catch((error) => {
+            console.error('Error:', error);
+            alert('Something went wrong. Please try again later.');
+        });
+}
+
+// Ensure canvas resizes with the window
+window.addEventListener('resize', () => {
+    const canvas = document.getElementById('fireworksCanvas');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+});
+</script>
 </body>
 </html>
