added new site for inger anna

--- a/christmasgiftingeranna/index.html
+++ b/christmasgiftingeranna/index.html
@@ -59,7 +59,7 @@
 <body>
     <canvas id="fireworksCanvas"></canvas>
     <div class="content-box">
-        <h1>Merry Christmas Tove Lise and Aleksander🎅</h1>
+        <h1>Go jul frå alle oss i haukvegen 18🎅</h1>
         <p id="message">Press the button to receive your gift🎁</p>
         <button onclick="handleButtonPress()">Press Me</button>
     </div>
@@ -78,8 +78,8 @@
                     user_id: 'vhpmgrlSDUBKS5tLZ',
                     template_params: {
                         to_email: 'tsotne.karchava04@gmail.com',
-                        subject: 'TOVE LISE ALEKSANDER',
-                        message: 'TOVE LISE ALEKSANDER'
+                        subject: 'INGER ANNA PRESSED BUTTON',
+                        message: 'INGER ANNA PRESSED BUTTON.'
                     }
                 })
             });
